--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: go test
+name: go benchmark
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     container: golang:1.25-alpine
-    name: Test package
+    name: Run benchmark
     steps:
       - uses: actions/checkout@v6
         name: Checkout
@@ -34,7 +34,7 @@ jobs:
           go mod download
           go mod tidy
           go mod vendor
-      - name: Run go tests
-        id: go-test
+      - name: Run go benchmark
+        id: go-benchmark
         run: |
-            go test -v github.com/euphoria-laxis/argon2/hashing
+            go test github.com/euphoria-laxis/argon2 -bench=. -benchtime=10x -benchmeum
