--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,40 +1,38 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: go test
+name: test
 
 on:
-  push:
-    tags:
-      - v*
-  pull_request:
-    branches:
-      - master
-      - release/*
+    push:
+        tags:
+            - v*
+    pull_request:
+        branches:
+            - master
+            - release/*
+            - dev/*
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    container: golang:1.25-alpine
-    name: Test package
-    steps:
-      - uses: actions/checkout@v6
-        name: Checkout
-        id: checkout
-        with:
-          sparse-checkout: |
-            .github
-            .gitignore
-            .golangci.yml
-            README.md
-            LICENSE
-      - name: Download and install dependencies
-        id: install-deps
-        run: |
-          go mod download
-          go mod tidy
-          go mod vendor
-      - name: Run go tests
-        id: go-test
-        run: |
-            go test -v github.com/euphoria-laxis/argon2/hashing
+    test:
+        runs-on: ubuntu-latest
+        container: golang:1.25-alpine
+        name: Test package
+        steps:
+            - uses: actions/checkout@v6
+              name: Checkout
+              id: checkout
+              with:
+                  sparse-checkout: |
+                      .github
+                      .gitignore
+                      .golangci.yml
+                      README.md
+                      LICENSE
+            - name: Download and install dependencies
+              id: install-deps
+              run: |
+                  go mod download
+                  go mod tidy
+                  go mod vendor
+            - name: Run go tests
+              id: go-test
+              run: |
+                  go test -v github.com/euphoria-laxis/argon2/hashing
