Update benchmark.yml and remove go mod vendor step from lint.yml to avoid errors

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,4 +34,4 @@ jobs:
             - name: Run go benchmark
               id: go-benchmark
               run: |
-                  go test github.com/euphoria-laxis/argon2 -bench=. -benchtime=10s
+                  go test github.com/euphoria-laxis/argon2 -bench=. -benchtime=5x
